--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -3,11 +3,10 @@ site_name: LuminoDocs
 nav:
   - Introducción: index.md
   - Requisitos: requeriments.md
+  - Instalación: installation.md
   - Diseño: system-design.md
   - Implementación: implementation.md
   - Tests: tests.md
-  - Despliegue: deployment.md
-  - Manuales de usuario: user-manual.md
   - Mantenimiento y Actualización: maintanance.md
   - Conclusión y Futuro: our-future.md
 
