--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -17,7 +17,7 @@ theme:
   name: material
   palette:
     - scheme: default
-      primary: brown
+      primary: teal
       toggle:
         icon: material/brightness-7 
         name: Switch to dark mode
