--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -22,7 +22,7 @@ theme:
         icon: material/brightness-7 
         name: Switch to dark mode
     - scheme: slate
-      primary: cyan
+      primary: teal
       toggle:
         icon: material/brightness-4
         name: Switch to light mode
